@@ -166,6 +166,7 @@
 		<li>echi-converter stop &#8211; stop the service</li>
 		<li>echi-converter pause &#8211; pause the service</li>
 		<li>echi-converter resume &#8211; resume the service</li>
+		<li>echi-converter status &#8211; returns the status of a configured service</li>
 		<li>echi-converter uninstall &#8211; uninstall the service</li>
 		<li>echi-converter delete &#8211; delete the service&#8221;</li>
 	</ol>
@@ -183,21 +184,6 @@
 
 
 <pre syntax="ruby">echi-converter stop myproject</pre>
-
-	<h2>Limitations</h2>
-
-
-	<p>Items to be done to move this out of alpha stage:</p>
-
-
-	<ol>
-	<li>There are currently two limitations when running on Windows
-	<ol>
-	<li>Project directories may not have spaces</li>
-		<li>The Ruby interpreter must be installed in the default location of c:\ruby\bin</li>
-	</ol></li>
-	</ol>
-
 
 	<h2>Screencast</h2>
 
